Refactored:Dashboard UI

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,3 +2,11 @@
     margin: 5% auto;
     width:85%;
 }
+
+.appbar-div{
+    border: 1px solid rgba(0, 0, 0, 0.54);
+    border-radius: 5px;
+    display: flex;
+    padding: 4px;
+    margin: auto;
+  }
