--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -30,3 +30,23 @@
   color: transparent;
   font-weight: bold;
 }
+
+@media screen and (max-width: 400px) {
+  #login-form,
+  #registeration-form,
+  #resetpassword-form,
+  #forgotpassword-form {
+    width: 100%;
+    margin: 2% auto;
+  }
+}
+
+@media screen and (min-width: 400px) and (max-width: 900px) {
+  #login-form,
+  #registeration-form,
+  #resetpassword-form,
+  #forgotpassword-form {
+    width: 70%;
+    margin: 2% auto;
+  }
+}
